Service/ingress/deployment.yaml
#
# Deployment for Wolf pods
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wolfs                       # Name of the deployment object
  labels:
    app: wolf                     
spec:
  replicas: 2                       # Number of instances in the deployment
  selector:                         # Selector identifies pods to be
      matchLabels:                  #     part of the deployment 
         app: wolf                  #     by matching of the label "app" 
  template:                         # Templates describes pods of the deployment
    metadata:
      labels:                       # Defines key-value map
        app: wolf                   # Label to be recognized by other objects
    spec:                           #     as deployment or service
      containers:                   # Lists all containers in the pod
      - name: echo                  # container name
        image: hashicorp/http-echo  # container docker image
        args: ["-listen=:8080", "-text='Wolf server!'"]
        ports:
        - containerPort: 8080       # port exposed by container
---
#
# Service for Wolf pods
#
apiVersion: v1
kind: Service
metadata:
  name: wolf-svc                    # service name
spec:
  type: ClusterIP                   # type of the service (exposing port inside of a cluster)
  selector:                         # selection of pods
    app: wolf                       # that belong to the service
  ports:
  - protocol: TCP
    port: 8080                      # port exposed by the service
    targetPort: 8080                # port exposed by the pods
---
#
# Deployment of Rabbit pods
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbits                      # Name of the deployment object
  labels:
    app: rabbit                     
spec:
  replicas: 2                       # Number of instances in the deployment
  selector:                         # Selector identifies pods to be
      matchLabels:                  #     part of the deployment 
         app: rabbit                #     by matching of the label "app" 
  template:                         # Templates describes pods of the deployment
    metadata:
      labels:                       # Defines key-value map
        app: rabbit                 # Label to be recognized by other objects
    spec:                           #     as deployment or service
      containers:                   # Lists all containers in the pod
      - name: echo                  # container name
        image: hashicorp/http-echo  # container docker image
        args: ["-listen=:8090", "-text='Rabbit server!'"]
        ports:
        - containerPort: 8090       # port exposed by container
---
#
# Service for Rabbit pods
#
apiVersion: v1
kind: Service
metadata:
  name: rabbit-svc                  # service name
spec:
  type: ClusterIP                   # type of the service (exposing port inside of a cluster)
  selector:                         # selection of pods
    app: rabbit                     # that belong to the service
  ports:
  - protocol: TCP
    port: 8090                      # port exposed by the service
    targetPort: 8090                # port exposed by the pods
